--- a/readme
+++ b/readme
@@ -1,3 +1,4 @@
 generate the documentation (you need doxygen)
  $ make doc
 and point your web browser to doc/html/index.html
+also see the file license.
