polished documentation; added automatic n_swap

--- a/INSTALL
+++ b/INSTALL
@@ -1,5 +1,5 @@
 
-dependencies:
+You have to install the following packages for dependencies:
 
 gsl (GNU Scientific Library)
 boehmgc (Garbage Collector) 
@@ -9,14 +9,21 @@ duma (optional)
 
 Compile:
 	make clean all tests doc
+
 	This should never give you errors. Check running this command before 
 	committing a revision.  
 
 	Check that you have a reasonably new gcc (i.e. gcc-4).
 
 
+
+
+
+
+____________________________________________
+
 Alternative way to install the dependencies:
-	Only if you can't install with a package (no root rights or no package)!
+	**Only if you can't install with a package** (e.g. no root rights or no package)!
 	download+extract each tar and run 
 		./configure --prefix=/home/buchner/bin/
 		make; make install
@@ -25,5 +32,8 @@ Alternative way to install the dependencies:
 	set
 	CCFLAGS="-I /home/buchner/bin/include/ -L /home/buchner/bin/lib/" 
 	LD_LIBRARY_PATH=/home/buchner/bin/lib/
-	
 
+	urls:
+		http://www.hpl.hp.com/personal/Hans_Boehm/gc/
+		http://www.gnu.org/software/gsl/
+		http://duma.sourceforge.net/
